--- a/Week_02/Lab04_DecisionTrees.ipynb
+++ b/Week_02/Lab04_DecisionTrees.ipynb
@@ -837,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "7xJJyNClr8cD"
       },
@@ -893,7 +893,8 @@
         "plt.legend()\n",
         "plt.title('Decision Tree Classification Results')\n",
         "plt.grid(True)\n",
-        "plt.show()"
+        "plt.show()\n",
+        "print(\"aaaaaaaaaaaa\")"
       ]
     }
   ],
