--- a/Week_1/Problem_Analysis_and_Data_Preprocessing.ipynb
+++ b/Week_1/Problem_Analysis_and_Data_Preprocessing.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -156,7 +156,7 @@
               "4         0.120          8  "
             ]
           },
-          "execution_count": 83,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 3,
       "metadata": {
         "id": "-dCq2-NW1o5F"
       },
@@ -413,7 +413,7 @@
               "[4176 rows x 9 columns]"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 4,
       "metadata": {
         "id": "sw_28SAt1o5G"
       },
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -576,7 +576,7 @@
         "print(rows_with_many_missing.index)\n",
         "\n",
         "print(\"\\nCount of missing values in each of these rows:\")\n",
-        "print(rows_with_many_missing)"
+        "print(rows_with_many_missing)   "
       ]
     },
     {
@@ -599,7 +599,9 @@
         "\n",
         "Similarly, because our study objects are nails, what would be the purpose of finding a relationship between missing length in mm and width in mm?\n",
         "As in, any one missing information was more likely related to a mistake/omission by the scientist measuring the snails. \n",
-        "We could be interested in seeing if any one source of our data often missed some metric, and then trying to understan why (was the scientist lazy, or was this simply not a metric that was registered when they were working?) But this would be far more relevant on data for a real experiment than for our study case."
+        "We could be interested in seeing if any one source of our data often missed some metric, and then trying to understan why (was the scientist lazy, or was this simply not a metric that was registered when they were working?) But this would be far more relevant on data for a real experiment than for our study case.\n",
+        "\n",
+        "But an alternative could be to calculate the mean and just insert that to the missing values.\n"
       ]
     },
     {
@@ -611,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 8,
       "metadata": {
         "id": "gxDCHrb31o5G"
       },
@@ -636,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 9,
       "metadata": {
         "id": "HbkY--hk1o5I"
       },
@@ -841,7 +843,7 @@
               "[4176 rows x 9 columns]"
             ]
           },
-          "execution_count": 111,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -869,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 10,
       "metadata": {
         "id": "TmhZ8_FC1o5J"
       },
@@ -902,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 11,
       "metadata": {
         "id": "CFZgvye31o5K"
       },
@@ -915,34 +917,45 @@
             "\n",
             "There are 1187 emails.\n",
             "\n",
-            "From: henry@zoo.toronto.edu (Henry Spencer)\n",
-            "Subject: Re: space news from Feb 15 AW&ST\n",
-            "Organization: U of Toronto Zoology\n",
-            "Lines: 23\n",
+            "From: aws@iti.org (Allen W. Sherzer)\n",
+            "Subject: Re: Why not give $1 billion to first year-long moon residents?\n",
+            "Organization: Evil Geniuses for a Better Tomorrow\n",
+            "Lines: 34\n",
             "\n",
-            "In article <1993Apr23.155313.4220@dazixco.ingr.com> jbreed@ingr.com writes:\n",
-            ">|> [Pluto's] atmosphere will start to freeze out around 2010, and after about\n",
-            ">|> 2005 increasing areas of both Pluto and Charon will be in permanent\n",
-            ">|> shadow that will make imaging and geochemical mapping impossible.\n",
-            ">\n",
-            ">Where does the shadow come from?  There's nothing close enough to block\n",
-            ">sunlight from hitting them.  I wouldn't expect there to be anything block\n",
-            ">our view of them either.  What am I missing?\n",
+            "In article <C5sJDp.F23@zoo.toronto.edu> henry@zoo.toronto.edu (Henry Spencer) writes:\n",
             "\n",
-            "You're assuming that their normal rotation carries all areas of the surface\n",
-            "into sunlight.  Not so.  Even on Earth, each pole gets several weeks without\n",
-            "sunlight in mid-winter.  Pluto and Charon have much more extreme axial\n",
-            "tilt and a much longer orbit.  Pluto's north pole, for example, gets over\n",
-            "a century of darkness followed by over a century of perpetual light.\n",
+            ">>This prize isn't big enough to warrent developing a SSTO, but it is\n",
+            ">>enough to do it if the vehicle exists.\n",
             "\n",
-            "At the moment, we're in luck -- Pluto and Charon are just past their\n",
-            "equinox, when the Sun was just on the horizon at both poles (of each).\n",
-            "If we get probes there soon, only the immediate vicinity of one pole\n",
-            "(on each) will be in long-term shadow.  This will get steadily worse the\n",
-            "longer we wait.\n",
+            ">Actually, there are people who will tell you that it *would* be enough\n",
+            ">to do SSTO development, if done privately as a cut-rate operation.  Of\n",
+            ">course, they may be over-optimistic.\n",
+            "\n",
+            "In spite of my great respect for the people you speak of, I think their\n",
+            "cost estimates are a bit over-optimistic. If nothing else, a working SSTO\n",
+            "is at least as complex as a large airliner and has a smaller experience\n",
+            "base. It therefore seems that SSTO development should cost at least as\n",
+            "much as a typical airliner development. That puts it in the $3G to $5G\n",
+            "range.\n",
+            "\n",
+            ">You can also assume that a working SSTO would have other applications\n",
+            ">that would help pay for its development costs.\n",
+            "\n",
+            "True it and the contest would result in a much larger market. But I\n",
+            "don't think it would be enough to attract the investors given the\n",
+            "risks involved.\n",
+            "\n",
+            "If you could gurantee the SSTO costs and gurantee that it captures\n",
+            "100% of the available launch market, then I think you could\n",
+            "do it.\n",
+            "\n",
+            "  Allen\n",
+            "\n",
             "-- \n",
-            "All work is one man's work.             | Henry Spencer @ U of Toronto Zoology\n",
-            "                    - Kipling           |  henry@zoo.toronto.edu  utzoo!henry\n",
+            "+---------------------------------------------------------------------------+\n",
+            "| Lady Astor:   \"Sir, if you were my husband I would poison your coffee!\"   |\n",
+            "| W. Churchill: \"Madam, if you were my wife, I would drink it.\"             |\n",
+            "+----------------------56 DAYS TO FIRST FLIGHT OF DCX-----------------------+\n",
             "\n"
           ]
         }
@@ -966,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 12,
       "metadata": {
         "id": "7XjYd0ML1o5L"
       },
@@ -992,27 +1005,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
-      "metadata": {
-        "id": "GhpnijnB1o5M"
-      },
+      "execution_count": 16,
+      "metadata": {},
       "outputs": [
         {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'nltk'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[112]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnltk\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mitertools\u001b[39;00m\n\u001b[32m      3\u001b[39m nltk.download(\u001b[33m'\u001b[39m\u001b[33mpunkt\u001b[39m\u001b[33m'\u001b[39m)\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'nltk'"
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to\n",
+            "[nltk_data]     C:\\Users\\juand\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "import nltk\n",
+        "nltk.download('punkt_tab')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "GhpnijnB1o5M"
+      },
+      "outputs": [],
+      "source": [
+        "import nltk\n",
         "import itertools\n",
-        "nltk.download('punkt')\n",
         "\n",
         "# Tokenize the sentences into words\n",
         "tokenized_sentences = [nltk.word_tokenize(sent) for sent in data]\n",
@@ -1022,11 +1052,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "LvKCOBjx1o5M"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 1632 unique words tokens.\n"
+          ]
+        }
+      ],
       "source": [
         "# Count the word frequencies\n",
         "word_freq = nltk.FreqDist(itertools.chain(*tokenized_sentences))\n",
@@ -1035,11 +1073,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "yw_h_8Vo1o5N"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using vocabulary size 1000.\n",
+            "The least frequent word in our vocabulary is 'NEEDS' and appeared 1 times.\n"
+          ]
+        }
+      ],
       "source": [
         "# Get the most common words and build index_to_word and word_to_index vectors\n",
         "vocab = word_freq.most_common(vocabulary_size-1)\n",
@@ -1064,11 +1111,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "LAQX0zw11o5N"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Is this implementation correct?\n",
+            "Answer: No\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "countvec = CountVectorizer()\n",
@@ -1134,7 +1190,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".conda",
+      "display_name": "MLvenv",
       "language": "python",
       "name": "python3"
     },
@@ -1148,7 +1204,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
