--- a/Week_1/Problem_Analysis_and_Data_Preprocessing.ipynb
+++ b/Week_1/Problem_Analysis_and_Data_Preprocessing.ipynb
@@ -31,6 +31,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "All supervised learning.\n",
+        "Sequence - \n",
+        "\n",
+        "1) Formalize the problem, find what our input-output would be.\n",
+        "\n",
+        "Ordinal \n",
+        "Out input is rating and features\n",
+        "output, prediction\n",
+        "\n",
+        "\n",
+        "Sequences - graphs for example\n",
+        "\n",
+        "Wide range of values can cause problems. We need to scale them.\n",
+        "If we use our linear decision function,\n",
+        "with original random weights, large values \n",
+        "\n",
+        "Normalization as a way to prevent the following problem: \n",
+        "Early stopping - With no normalization and no early stopping, our model Will eventually come to a correct prediction with enough epochs, but it will take extra epochs to find the solution, so more resources. With  early stopping, it will not actually find the right solution.\n",
+        "\n",
+        "With normalization we can avoid this scenario of having to unoptimal results.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -446,32 +480,49 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "When mean and median are similar enough, that means we dont have outliers in our data.\n",
+        "Where would the outliers come from? Errors in data collection? Problems with units?\n",
+        "\n",
+        "The wrong \n",
+        "\n",
+        "Careful, don't use the mean to replace the numeric values across the whole data set. \n",
+        "\n",
+        "\n",
+        "First organize by class. Find the mean of the subcategories.\n",
+        "Use the mean of one category,\n",
+        "and then the mean of the other category.\n",
+        "Using the mean of all classes will cause you to loose a lot of information.\n",
+        "\n",
+        "First you split in classes and then the median of classes.\n",
+        " \n",
+        "Think about the facial hair mean for gender.\n",
+        "If you replace say men have like"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "sw_28SAt1o5G"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "type              1.00000\n",
-            "length            0.54500\n",
-            "width             0.42500\n",
-            "height            0.14000\n",
-            "total_weight      0.80175\n",
-            "meat_weight       0.33600\n",
-            "drained_weight    0.17050\n",
-            "shell_weight      0.23350\n",
-            "num_rings         9.00000\n",
-            "dtype: float64\n"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'venv (Python 3.11.0)' requires the ipykernel package.\n",
+            "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: 'c:/Users/juand/Downloads/clem1/venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
           ]
         }
       ],
       "source": [
         "##################\n",
-        "median = data_nomissing.median()\n",
+        "median = data_nomissing[1:].median()\n",
         "print(median)\n",
         "##################"
       ]
@@ -496,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -509,7 +560,8 @@
       ],
       "source": [
         "rows_with_minus_one = df.apply(lambda row: (-1 in row.values), axis=1).sum()\n",
-        "print(\"Number of rows with at least one -1 value:\", rows_with_minus_one)"
+        "print(\"Number of rows with at least one -1 value:\", rows_with_minus_one)\n",
+        "\n"
       ]
     },
     {
@@ -637,8 +689,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "HbkY--hk1o5I"
       },
@@ -855,7 +912,7 @@
         "\n",
         "Z_score = Z_score[df.columns]\n",
         "Z_score\n",
-        "##################"
+        "##################\n"
       ]
     },
     {
@@ -1110,8 +1167,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Go from bag of words to\n",
+        "tfidf\n",
+        "to ngrams\n",
+        "to entire sequences (transformers)\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "LAQX0zw11o5N"
       },
@@ -1134,8 +1201,22 @@
         "    \n",
         "    ##################\n",
         "    #INSERT CODE HERE#\n",
+        "\n",
+        "    total_terms = df.sum(axis=1)\n",
+        "    tf = df.copy()\n",
+        "\n",
+        "    doc_num = len(df.index)\n",
+        "    doc_count = (df>0).sum(axis=0)\n",
+        "\n",
+        "    idf = np.log(doc_num/doc_count) + 1\n",
+        "\n",
+        "    tfidf = tf * idf\n",
+        "\n",
+        "\n",
+        "\n",
+        "    # The +1 is to smooth terms that appear in all documents.\n",
         "    ##################\n",
-        "    return None\n",
+        "    return tfidf\n",
         "    \n",
         "    \n",
         "rep = tfidf(df)\n",
@@ -1190,7 +1271,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "MLvenv",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -1204,7 +1285,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.11.0"
     }
   },
   "nbformat": 4,
